# DIReducer

./: .gitignore  CMakeLists.txt  README.md
example/input/: expr  nginx
include/CFG/: AsmBlock.h  AsmCFG.h  AsmStatement.h  CG.h  Edge.h  Func.h  Type.h  TypeFactory.h  Utils.h  Var.h
include/Core/: Analysis.h  DepAnalysis.h  RuntimeInfo.h  TIConfigure.h  TIContext.h  TIOperand.h  TypeCalculator.h
include/DWARF/: AbbrevEntry.h  AbbrevItem.h  AbbrevList.h  AbbrevObject.h  AbbrevParser.h  AttrBuffer.h  CompilationUnit.h  DWARFBuffer.h  DWARFExprParser.h  DWARFOP.h  DWARFObject.h  ELFObject.h  InfoEntry.h  InfoObject.h  LineList.h  LineObject.h  LineStateMachine.h  LineTable.h  LoclistsEntry.h  LoclistsList.h  LoclistsObject.h
include/DWARFLinker/: BlockCell.h  FunctionCell.h  Linker.h  TypeCell.h  VariableCell.h
include/Fig/: assert.hpp
include/Utils/: Buffer.h  Common.h  SetAlgo.h  Struct.h  ToStr.h
lib/: CMakeLists.txt
lib/CFG/: AsmBlock.cpp  AsmCFG.cpp  AsmStatement.cpp  CG.cpp  Edge.cpp  Func.cpp  Type.cpp  TypeFactory.cpp  Utils.cpp  Var.cpp
lib/Core/: Analysis.cpp  BackwardAnalysis.cpp  CMakeLists.txt  Configure.cpp  ForwardAnalysis.cpp  ParameterAnalysis.cpp  RuntimeInfo.cpp  TIContext.cpp  TIOperand.cpp  TypeCalculator.cpp
lib/DWARF/: AbbrevEntry.cpp  AbbrevItem.cpp  AbbrevList.cpp  AbbrevObject.cpp  AbbrevParser.cpp  AttrBuffer.cpp  CompilationUnit.cpp  DWARFBuffer.cpp  DWARFExprParser.cpp  DWARFOP.cpp  DWARFObject.cpp  ELFObject.cpp  InfoEntry.cpp  InfoObject.cpp  LineList.cpp  LoclistsEntry.cpp  LoclistsList.cpp  LoclistsObject.cpp
lib/DWARFLinker/: BlockCell.cpp  FunctionCell.cpp  Linker.cpp  TypeCell.cpp  VariableCell.cpp
lib/Utils/: Buffer.cpp  Common.cpp  ToStr.cpp
tools/: CMakeLists.txt
tools/DIReducer/: CMakeLists.txt  Config.cpp  Config.h  Context.cpp  Context.h  LibLoader.cpp  LibLoader.h  main.cpp
